Fix cursor jump in uppercase inputs

--- a/webapp/style/forms.less
+++ b/webapp/style/forms.less
@@ -23,6 +23,10 @@ input, select {
         color: #ccc;
     }
 
+    &[uppercase] {
+        text-transform: uppercase;
+    }
+
     &:placeholder-shown {
         text-transform: none;
     }
